--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -306,3 +306,18 @@ a{
 .h-100{
     height: 100px;
 }
+.ql-container {
+    min-height: 12rem;
+    height: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .ql-editor {
+    height: 100%;
+    flex: 1;
+    overflow-y: auto;
+    width: 100%;
+  }
+  
